syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "method_messages.proto";

option go_package = "./;pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
	info: {
		title: "Method API";
		version: "0.0.1";
	};
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  };
  security: {
    security_requirement: {
      key: "bearer"
    }
  };
};

service MethodService{
  rpc CreateMethod (CreateMethodRequest) returns (CreateMethodResponse) {
    option (google.api.http) = {
      post: "/methods"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create a new method";
      summary: "Create a new method";
    };
  };
  rpc DeleteMethodById (DeleteMethodByIdRequest) returns (DeleteMethodByIdResponse) {
    option (google.api.http) = {
      delete: "/methods/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to delete method by id";
      summary: "Delete method by id";
    };
  };

  rpc FindMethods (FindMethodsRequest)returns (FindMethodsResponse){
    option (google.api.http) = {
			get: "/methods"
		};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to find methods";
      summary: "Find Methods";
    };
  }
}